 - New sprite export dialog that lets you configure some export preferences, including
   remapping sprite source paths.
 - Sprites have "Real" resolution type by default. "Low" and "High resolution" are kept
   for backwards compatibility only. When importing older games resolution type will be
   promoted to "Real" whenever it matches the game.
 - Adjusted saving sprite file to not cancel completely if only an optional step has failed
   (such as copying a backup file).
 - New navigation bar in the room editor, which allows to select any room object
   or region for editing, show/hide and lock room objects and regions in any combination.
   These settings are saved in the special roomXXX.crm.user files.
 - Improved how Room zoom slider works, now supports downscale.
 - Added "Export mask to file" tool button to the Room Editor.
 - Added MaskResolution property to Rooms. It ranges from 1:1 to 1:4 and lets you define
   the precision of Hotspot, Regions and Walkable Areas relative to room background.
 - Added "Default room mask resolution" to General Settings, which value will be applied
   to any room opened for editing in this game for the first time.
 - Removed Locked property from the Room Object, objects are now locked by the navbar.
 - Split GUI's Visibility property into PopupStyle and Visible properties.
 - Added Clickable, Enabled and Visible properties to GUI Controls.
 - "Import over font" command now supports importing WFN fonts too.
 - Removed "Fonts designed for high resolution" option from General Settings. Instead added
   individual SizeMultiplier property to Fonts.
 - Display audio clip length on the preview pane without starting playback.
 - Added "Always"choice to "Popup message on compile" preference. Successful compilation
   popup will only be displayed if "Always" choice is selected.
 - Added shortcut key combination (Shift + F5) for stopping a game's debug run.
 - Don't display missing games in the "recent games" list.